--- a/src/components/certificate/Certificate.scss
+++ b/src/components/certificate/Certificate.scss
@@ -7,6 +7,7 @@
         line-height: 40px;
         text-align: center;
         color: #2C2D2E;
+        margin-bottom: 16px;
     }
 
     h1 span {
